update build scripts